--- a/gallery.html
+++ b/gallery.html
@@ -48,10 +48,17 @@
                     <ul>
                         <li id="menu-item-113" class="nav-option"><a href="about.html">About</a></li>
                         <li id="menu-item-115" class="nav-option"><a href="projects.html" aria-current="page">Projects</a></li>
-                        <li id="menu-item-114" class="nav-option"><a href="misc.html" aria-current="page">Misc.</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-link">Misc.</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="gallery.html">Photos</a></li>
+                                <li><a href="art.html">Art</a></li>
+                                <li><a href="recipes.html">Recipes</a></li>
+                            </ul>
+                            </li>
+                        </a></li>
                         <li id="menu-item-114" class="nav-option"><a href="contact.html" aria-current="page">Contact</a></li>
-
-                    </ul></div>							</nav>
+                    </ul></div></nav>
             <!-- #site-navigation -->
 
 
