--- a/misc.html
+++ b/misc.html
@@ -63,5 +63,16 @@
 
 
     </div>
+
+
+<footer>
+    <div class="footer-container">
+      <p>&copy; 2024 Sarah Johnson</p>
+    </ul>
+      <div class="social-media">
+        <a href="https://www.linkedin.com/in/sarahmjohnsonn/" class="fa fa-linkedin"></a>
+    </div>
+    </div>
+  </footer>
 </body>
 </html>
