--- a/gallery.html
+++ b/gallery.html
@@ -159,7 +159,7 @@
       <p>&copy; 2024 Sarah Johnson</p>
     </ul>
       <div class="social-media">
-        <a href="www.linkedin.com/in/sarahmjohnsonn/" class="fa fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in/sarahmjohnsonn/" class="fa fa-linkedin"></a>
     </div>
     </div>
   </footer>
